# lsms

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  architecture.mk
Test/LSF/000-ni-fcc/: i_lsms.lua  w_Ni.0  w_Ni.1  w_Ni.2  w_Ni.3
Test/LSF/001-ni-fcc-lsf/: i_lsms.lua  w_Ni.0  w_Ni.1  w_Ni.2  w_Ni.3
Test/LSF/002-fe-fcc/: i_lsms.lua  v_Fe.0  v_Fe.1  v_Fe.2  w_Fe.0  w_Fe.1  w_Fe.2  w_Fe.3
Test/LSF/003-fe-fcc/: i_lsms.lua  v_Fe.3  w_Fe.0  w_Fe.1  w_Fe.2  w_Fe.3
Test/LSF/004-fe-fcc-ref/: al_fcc.in  al_hcp_cpa.in  test_al_fcc.py
Test/LSF/Ni-fcc/: .gitignore  end.POSCAR  i_lsms
Test/Regression/: CMakeLists.txt
Test/Regression/000-al-fcc-nsp/: i_lsms.lua  v_al.0  v_al.1  v_al.2
Test/Regression/05_cuzn_b2_asa/: i_lsms.lua
Test/Relaxation/: .gitignore  start.sh
Test/Unit/: CMakeLists.txt  ewald.py  run_multipole_madelung.cpp  test_g0.cpp  test_gaunt.cpp  test_madelung.cpp  test_multipole_moments.cpp  test_parallel_outward.cpp  test_single_site.cpp  test_special_functions.cpp  zsphbesj.f90
architecture/: francoMU
cmake/: FindMuSTTests.cmake  libxc.cmake  lua.cmake
dev_scripts/forces/: forces.cpp  forces.f90  forces.py
dev_scripts/interpolations/: interpolation.py
dev_scripts/spherical_harmonics/: spherical_harmonics.py
diff/: fm.txt  nc.txt
doc/latex/: .gitignore
include/: CMakeLists.txt  LAPACK.hpp
latex/: .gitignore
libxc-4.2.3/: .gitignore  Makefile.in  configure
libxc-4.2.3/cmake/: Makefile.in
libxc-4.2.3/maple/: Makefile.in
libxc-4.2.3/pylibxc/: Makefile.in
libxc-4.2.3/scripts/: Makefile.in
libxc-4.2.3/src/: Makefile.in
libxc-4.2.3/testsuite/: Makefile.in
mjson/: CMakeLists.txt
src/: CMakeLists.txt
src/Accelerator/: CMakeLists.txt
src/Atomic/: CMakeLists.txt  states.cpp  states.hpp
src/ChargeDensity/: ChargeDensity.cpp  ChargeDensity.hpp
src/Communication/: CMakeLists.txt  LSMSCommunication.cpp  LSMSCommunication.hpp  REWLCommunication.cpp  REWLCommunication.hpp  distributeAtoms.cpp
src/Core/: CMakeLists.txt  calculateCoreStates.cpp  calculateCoreStates.hpp  coreSolver.cpp  coreSolver.hpp  invals_c.f
src/Forces/: CMakeLists.txt  forces.cpp  forces.hpp  forces_params.cpp  forces_params.hpp
src/IO/: CMakeLists.txt  POSCARStructureIO.cpp  POSCARStructureIO.hpp  POSCARStructureType.hpp  StructureIO.hpp  chain_stream.cpp  chain_stream.hpp  io_utils.cpp  io_utils.hpp  mpi_chain.hpp  orderedPrint.cpp  orderedPrint.hpp
src/LuaInterface/: CMakeLists.txt  LuaInterface.hpp  RadialPotential_lua.hpp
src/Madelung/: CMakeLists.txt  Madelung.cpp  madelung.h
src/Madelung/Multipole/: CMadelungModule.f90  CMakeLists.txt  GauntFactorsModule.f90  LatticeModule.f90  MadelungModule.f90  calcHigherOrderMadelung.cpp  createLattice.f90  main.cpp  multipole_madelung.h  numlat.F90
src/Madelung/MultipoleImproved/: CMakeLists.txt  LatticeModule.f90  integer_factors.f90  legendre.f90  madelung_module.f90
src/Main/: CMakeLists.txt  PotentialIO.cpp  PotentialIO.hpp  SystemParameters.cpp  SystemParameters.hpp  buildLIZandCommLists.cpp  buildLIZandCommLists.hpp  calculateChemPot.cpp  calculateDensities.cpp  calculateEvec.cpp  energyContourIntegration.cpp  initializeAtom.cpp  lsms.cpp  lsmsClass.cpp  lsmsClass.hpp  lsms_asa.cpp  mixing.cpp  mixing.hpp  mixing_params.cpp  mixing_params.hpp  read_input.cpp  read_input.h  rewl_lsms.cpp  solveSingleScatterers.cpp  wl_lsms.cpp  wl_lsms_new_noPotentialShift.cpp  write_restart.cpp  write_restart.hpp
src/Misc/: CMakeLists.txt  Coeficients.hpp  constraint.f  integrateOneDim.cpp  integrator.hpp  rationalFit.hpp  rwave.f  special_functions.hpp
src/MultipleScattering/: CMakeLists.txt  buildKKRMatrix_CPU.cpp  calculateTauMatrix.cpp  linearSolvers.hpp  linearSolvers_CPU.cpp  linearSolvers_CUDA.cu  mgreen_c.f90
src/MultipleScattering/Solvers/: CMakeLists.txt
src/MultipoleMadelung/: CMakeLists.txt  MultipoleMadelung.cpp  MultipoleMadelung.hpp  MultipoleMoments.cpp  MultipoleMoments.hpp  lattice_utils.cpp  lattice_utils.hpp
src/MultipoleMoments/: CMakeLists.txt  MultipoleMoments.cpp  MultipoleMoments.hpp
src/Potential/: CMakeLists.txt  PotentialShifter.cpp  PotentialShifter.hpp  calculateChargesPotential.cpp  getXCName.cpp  getqm_mt.f  getvmt.cpp  interpolatePotential.cpp  libxcInterface.cpp  libxcInterface.hpp  lsf_functional.cpp  lsf_functional.hpp  newPotential.cpp
src/Relaxation/: CMakeLists.txt  base_function.hpp  box_relaxation_function.cpp  box_relaxation_function.hpp  energyDebugMode.hpp  lsms_relaxation.cpp  lsms_relaxation.hpp  lsms_relaxation_function.cpp  lsms_relaxation_function.hpp  lsms_relaxation_main.cpp  nl_optimization.cpp  nl_optimization.hpp  relax_params.cpp  relax_params.hpp  relaxation.cpp  relaxation.hpp  rosenbrockFunction.cpp  rosenbrockFunction.hpp  utils.cpp  utils.hpp
src/SingleSite/: AtomData.hpp  CMakeLists.txt  nrel_spherical_solver.cpp  nrel_spherical_solver.hpp  readSingleAtomData_bigcell.cpp  readSingleAtomData_hdf5.cpp  writeSingleAtomData_bigcell.cpp  writeSingleAtomData_hdf5.cpp
src/StructureConstants/: CMakeLists.txt  Dcoeff.cpp  Dcoeff.h  NDArray.hpp  README.md  SpglibWrapper.cpp  SpglibWrapper.h  Structure.cpp  Structure.hpp  compare.py  compare_dist.py  main.cpp  test_ndarray.cpp  test_structure.cpp
src/Test/: WriteTMats.cpp  testPotentialShift.cpp
src/TotalEnergy/: CMakeLists.txt  calculateTotalEnergy.cpp  calculateTotalEnergy.hpp  energyStruct.cpp  energyStruct.hpp  localTotalEnergy.cpp  localTotalEnergy.hpp  localTotalEnergyNew.cpp  localTotalEnergyNew.hpp
src/VORPOL/: CMakeLists.txt  setupVorpol.cpp  setupVorpol.hpp  setup_vorpol.f
tests/: CMakeLists.txt
tests/Core/: CMakeLists.txt  core_solver.cpp
tests/Extended/: CMakeLists.txt  i_lsms  i_lsms.restart  info_evec_out  v_li.0  w_li.0
tests/Multipole/: CMakeLists.txt  madelung_improved.cpp  multipole_madlung.cpp  test_integer_factors.f90
tests/Optim/: CMakeLists.txt  no_grad_optim_test.cpp  optim_test.cpp
tests/Relaxation/: CMakeLists.txt  POSCARTest.cpp  relaxTest.cpp
toolchain/: develop.cmake
unittests/: CMakeLists.txt  test_multipole_moments.cpp
(+243 files in other folders)
